              David Jones <drj@ravenbrook.com>.

              pnmcolormap (pnmquant): round instead of truncating when
              computing means.

              pnmcat, pnmpaste, pnmpad, g3topbm: Add fast PBM path.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmpaste: fail if user specified stdin for both images.

              pamcut: don't crash when cutting a region entirely to the
              left or right of the input image, with -pad.

              pamtosvg: remove "needed exchange" debug trace.

              Add pbmminkowski (source code has been in package since 10.12
              but not documented or built by default).

              pnmmontage: don't corrupt file names when they contain
              colons.

              pamflip: fix bug: garbage output for PBMs, since 10.42.

              pngtopnm: fix gamma correction.

              pngtopnm: fix bug: when background is color, output
              should be PPM.

              pamperspective: fix bug: array bounds violation crash.

08.06.27 BJH  Release 10.43.00

              Add pamtompfont: Mplayer bitmap font.

              pamthreshold: copy transparency information from input to
              output.

              pnmnorm: adjust bvalue, wvalue when -bpercent and/or -wpercent
              would cause an overlap, instead of failing.

              pamscale: fix PBM input + -nomix.

              anytopnm: fix parsing of type description.

              pamtilt: fix crash with excessive angle.

              pbmtext: remove meaningless "no output" from error messages.

              pbm_loadbdffont(): handle zero size glyph.  Affects pbmtext.

              pbmtext: fail properly if input contains no text.

              pbmtext: fix buffer overrun with tab characters.

              pnmnorm: fix -colorvalue, -saturation, -keephues options.

              pnmnorm: fix resolution of conflicting -wpercent and -wvalue.
